--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,10 @@ sudo: false
 language: ruby
 rvm:
   - 2.5.1
-before_install: gem install bundler -v 1.16.2
+before_install:
+  - gem install bundler -v 1.16.2
+install:
+  - bundle install
+script:
+  - bin/rubocop
+  - bin/rake test
