--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - ruby-deps-v1-{{ checksum "Gemfile.lock" }}
+            - ruby-deps-v1-{{ checksum "jekyll-latex-block.gemspec" }}
             - ruby-deps-v1-
 
       - run:
@@ -29,7 +29,7 @@ jobs:
           command: bundle check || bundle install
 
       - save_cache:
-          key: ruby-deps-v1-{{ checksum "Gemfile.lock" }}
+          key: ruby-deps-v1-{{ checksum "jekyll-latex-block.gemspec" }}
           paths:
             - vendor/bundle
 
