--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,10 @@ jobs:
           command: ruby --version
 
       - run:
-          name: Update bundler
-          command: gem install bundler -v 2.0.1
+          name: Install Bundler 2
+          command: |
+            gem uninstall bundler -a
+            gem install bundler -v 2.0.1
 
       - run:
           name: Bundler version
