--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,5 +62,6 @@ jobs:
             tar xf *.gem
             tar tvf data.tar.gz
 
-      - store_test_results:
-          path: test_results
+      - store_artifacts:
+          path: coverage
+          prefix: coverage
