--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Install Bundler 2
           command: |
             sudo gem update --system
-            sudo gem install bundler -v 2.0.2
+            sudo gem install bundler -f -v 2.0.2
 
       - run:
           name: Bundler version
