--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,8 @@ AllCops:
     - Gemfile
     - Rakefile
   Exclude:
-    - 'bin/**/*'
+    - bin/rake
+    - bin/rubocop
     - 'vendor/**/*'
 
 Naming/FileName:
