--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.7-stretch-node
+      - image: circleci/ruby:2.7-node
         environment:
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
